# EnviroGen

./: MANIFEST.in  README.md  __init__.py  bot.py  environment.py  makdown.md  obstacle.py  plant.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: experiments.md  resources.md
src/envirogen/: __init__.py  app.py  entities.py  environment.py  experiments.py  policies.py  resources.py  spatial.py
tests/: test_experiments.py  test_public_api.py  test_resources_and_app.py  test_simulation.py  test_spatial.py
