[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envirogen"
version = "0.2.0"
description = "A lightweight Python agent-based ecosystem simulator with Tkinter demos."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "EnviroGen contributors" }
]
keywords = ["agent-based-modeling", "simulation", "ecosystem", "tkinter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://github.com/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
